<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#778D45">

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="Delete this record?"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextName"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextAmount"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextAmount"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextAmount"
                android:text="@string/details"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#344C11"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="10dp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

</RelativeLayout>