<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="#778D45">

            <TextView
                android:id="@+id/textViewIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextName"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextAmount"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/amount"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextDate"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/date"
                android:inputType="date"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/editTextDetails"
                android:text="Details (Optional)"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:ems="10"
                android:hint="@string/details"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#344C11"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>

</RelativeLayout>